# scraping-py

./: .gitignore  README.md  pyproject.toml
src/scraping_py/: dns_resolver.py  main.py  politness.py  types.py  utils.py
