[project]
name = "scraping-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Lagos",email = "felagossanchez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "scraping_py", from = "src"}]

[tool.poetry.scripts]
scrape = "scraping_py.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
